[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui/chat/chat-option-theme.tres" type="Theme" id=1]
[ext_resource path="res://src/main/ui/chat/mood-sprite.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/blogger-sans-12.tres" type="DynamicFont" id=3]
[ext_resource path="res://src/main/ui/chat/chat-option-button.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
resource_name = "focus"
length = 8.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1.8, 2.1, 3.8, 4.1, 5.8, 6.1, 7.7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, -6.0, -6.0, 6.0, 6.0, -6.0, -6.0, 6.0, 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4, 5, 6, 7, 8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ), Vector2( 1.05, 1.05 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "focus"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 1, 1.3, 2.2, 2.5, 3.5, 3.8, 4.7, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 6.0, 6.0, -6.0, -6.0, 6.0, 6.0, -6.0, -6.0, 6.0, 6.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rect_scale")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5, 1, 1.5, 2, 2.5, 3, 3.5, 4, 4.5, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[node name="ChatOptionButton" type="Button"]
margin_right = 100.0
margin_bottom = 66.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 1 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
_choice_text = "Are you kidding me? That's not even close to what I said!"

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
margin_bottom = -2.0
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.313726, 0.0980392, 0.0627451, 1 )
text = "Are you kidding me? That's not even close to what I said!"
align = 1
valign = 1
autowrap = true
max_lines_visible = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MoodSprite" type="Control" parent="."]
margin_left = -11.0
margin_top = 13.0
margin_right = 17.0
margin_bottom = 41.0
rect_rotation = -6.41492
rect_scale = Vector2( 1.00417, 1.00417 )
rect_pivot_offset = Vector2( 14, 14 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Texture" type="TextureRect" parent="MoodSprite"]
margin_left = -49.0
margin_top = -49.0
margin_right = 79.0
margin_bottom = 79.0
rect_rotation = -8.0
rect_scale = Vector2( 0.22, 0.22 )
rect_pivot_offset = Vector2( 64, 64 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="MoodSprite"]
autoplay = "default"
anims/default = SubResource( 1 )
anims/focus = SubResource( 2 )
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
